--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -14,7 +14,10 @@
   color: white;
   font-size: $font-size-large;
   font-weight: bold;
-  text-decoration: none;
+	text-decoration: none;
+	h1 {
+		margin: 0;
+	}
 }
 
 // Small devices (landscape phones, 576px and up)
